Entidades enlazadas con las vistas.

--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -11,11 +11,10 @@
                         <span class="fa fa-fw fa-4x fa-user"></span>
                     </div>
                     <div class="info">
-                        <h1 class="text-center">Nick<small>#2345</small></h1>
-                        <h1 class="text-center">Guild<small>[INICIALES]</small></h1>
-                        <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-flag"></i><span class="hidden-xs"> Atacar</span></a>
-                        <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs"> Conjurar</span></a>
-                        <a href="{{ path('archmage_game_account_outbox') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs"> Enviar</span></a>
+                        <h1 class="text-center">{{ player.nick }}<small>#????</small></h1>
+                        <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-flag"></i><span class="hidden-xs">Atacar</span></a>
+                        <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
+                        <a href="{{ path('archmage_game_account_outbox') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs">Mensaje</span></a>
                     </div>
                 </div>
             </div>
