--- a/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
@@ -12,21 +12,31 @@
                 <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                     <tr>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-calendar"></i> <span class="hidden-xs">Fecha</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i> <span class="hidden-xs">Mago</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-question-circle"></i> <span class="hidden-xs">Asunto</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-lg fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i><span class="hidden-xs">Mago</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-lg fa-question-circle"></i><span class="hidden-xs">Asunto</span></th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for i in 1..5 %}
+                    {% for message in player.messages %}
                         <tr>
-                            <td class="text-center">{{ "now"|date("d/m/Y H:i:s") }}</td>
-                            <td class="text-center"><a href="{{ path('archmage_game_account_profile') }}">Nombre del Mago</a></td>
-                            <td class="text-center">Asunto</td>
+                            <td class="text-center">{{ message.datetime|date('d/m/Y H:i:s') }}</td>
+                            <td class="text-center"><a href="{{ path('archmage_game_account_profile') }}">{{ message.who.nick|default('Admin') }}</a></td>
+                            <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a data-toggle="collapse" href="#message">{{ message.subject }}</a></td>
                         </tr>
                     {% endfor %}
                     </tbody>
                 </table>
+            </div>
+            <div class="col-xs-12">
+                <div class="panel panel-default collapse" id="message">
+                    <div class="panel-heading text-center">Asunto</div>
+                    <div class="panel-body text-padded">
+                        <div class="col-xs-12">
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
