--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -10,25 +10,25 @@
                     <h1><i class="fa fa-fw fa-user-times"></i>Desbandar<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
                 </div>
             </div>
-            {% for troop in troops %}
+            {% for troop in player.troops if troop.quantity > 0 %}
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-{{ troop.faction.class }}">
-                    <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ troop.name|slug }}">{{ troop.name }}</a> [{{ random(1500)|nf }}]</div>
+                <div class="panel panel-{{ troop.unit.faction.class }}">
+                    <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
-                                <img class="custom-thumbnail" src="{{ asset( troop.image ) }}">
+                                <img class="custom-thumbnail" src="{{ asset( troop.unit.image ) }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ troop.attack|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.defense|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.speed }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.goldMaintenance|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ troop.manaMaintenance|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ troop.peopleMaintenance|nf }}</div>
-                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-user"></i>{{ troop.family.name }}</a></div>
-                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-cogs"></i>{{ troop.type.name }}</a></div>
-                                <div class="col-xs-12"><a href="#"><i class="fa fa-fw fa-joomla"></i>Habilidad</a></div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ troop.unit.attack|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.unit.defense|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ troop.unit.manaMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ troop.unit.peopleMaintenance|nf }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.unit.family.name }}</a></div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
                             </div>
                         </div>
                     </div>
@@ -46,6 +46,10 @@
                         </form>
                     </div>
                 </div>
+            </div>
+            {% else %}
+            <div class="col-xs-12 alert alert-danger text-center" role="alert">
+                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> alguna.
             </div>
             {% endfor %}
         </div>
