--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -26,9 +26,9 @@
                                 <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.goldMaintenance|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ troop.manaMaintenance|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ troop.peopleMaintenance|nf }}</div>
-                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-user"></i>{{ troop.family.name }}</a></div>
-                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-cogs"></i>{{ troop.type.name }}</a></div>
-                                <div class="col-xs-12"><a href="#"><i class="fa fa-fw fa-joomla"></i>Habilidad</a></div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.family.name }}</a></div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.type.name }}</a></div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
                             </div>
                         </div>
                     </div>
