--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -7,13 +7,13 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-user-secret"></i>Mercado negro<br><small><i class="fa fa-fw fa-money"></i>{{ random(1000000000)|nf }}</small></h1>
+                    <h1><i class="fa fa-fw fa-user-secret"></i>Mercado negro<br><small><i class="fa fa-fw fa-money"></i>{{ player.gold|nf }}</small></h1>
                 </div>
             </div>
             {% for hero in heroes %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-{{ hero.faction.class }}">
-                    <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ hero.name|slug }}">{{ hero.name }}</a></div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path('archmage_game_home_help') }}#{{ hero.name|slug }}">{{ hero.name }}</a> [1]</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
@@ -46,14 +46,14 @@
             {% for artifact in artifacts %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ artifact.name|slug }}">{{ artifact.name }}</a></div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-joomla"></i><a href="{{ path('archmage_game_home_help') }}#{{ artifact.name|slug }}">{{ artifact.name }}</a> [1]</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
-                                <img class="custom-thumbnail" src="{{ asset(artifact.image) }}">
+                                <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                {{ artifact.description }}
+                                <i class="fa fa-fw fa-joomla"></i> {{ artifact.description }}
                             </div>
                         </div>
                     </div>
@@ -76,11 +76,11 @@
             {% for unit in units %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-{{ unit.faction.class }}">
-                    <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ unit.name|slug }}">{{ unit.name }}</a> [{{ random(1500)|nf }}]</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-users"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ unit.name|slug }}">{{ unit.name }}</a> [{{ random(1500)|nf }}]</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
-                                <img class="custom-thumbnail" src="{{ asset(unit.image) }}">
+                                <img class="custom-thumbnail" src="{{ asset( unit.image ) }}">
                             </div>
                             <div class="col-xs-8 text-padded">
                                 <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ unit.attack|nf }}</div>
@@ -89,9 +89,9 @@
                                 <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
-                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</a></div>
-                                <div class="col-xs-6"><a href="#"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</a></div>
-                                <div class="col-xs-12"><a href="#"><i class="fa fa-fw fa-joomla"></i>Habilidad</a></div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ unit.family.name }}</a></div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ unit.type.name }}</a></div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
                             </div>
                         </div>
                     </div>
