--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -7,17 +7,17 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-money"></i>Recaudar oro<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
+                    <h1><i class="fa fa-fw fa-money"></i>Recaudar oro<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
                 </div>
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-money"></i> {{ random(10000000)|nf }} oro</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-money"></i> {{ player.gold|nf }} oro</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                Texto descriptivo
+                                Aquí puedes aplicar impuestos desorbitados a tus leales súbditos con el objetivo de obtener grandes cantidades de oro para tus propios fines.
                             </div>
                         </div>
                     </div>
