--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -7,24 +7,24 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-magic"></i>Conjurar<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
+                    <h1><i class="fa fa-fw fa-magic"></i>Conjurar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
                 </div>
             </div>
-            {% for research in researchs %}
+            {% for research in player.researchs if research.active %}
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-{{ research.faction.class }}">
-                    <div class="panel-heading text-center"><a href="{{ path('archmage_game_home_help') }}#{{ research.name|slug }}">{{ research.name }}</a></div>
+                <div class="panel panel-{{ research.spell.faction.class }}">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i><a href="{{ path('archmage_game_home_help') }}#{{ research.spell.name|slug }}">{{ research.spell.name }}</a></div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
-                                <img class="custom-thumbnail" src="{{ asset( research.image ) }}">
+                                <img class="custom-thumbnail" src="{{ asset( research.spell.image ) }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ research.magic|nf }}</div>
-                                <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ research.manaCost|nf }}</div>
-                                <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ random(100) }}</div>
-                                <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ random(100) }}</div>
-                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>Habilidad</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ research.spell.magic|nf }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ research.spell.manaCost|nf }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ research.turns|nf }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ research.spell.turnResearch|nf }}</div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ research.spell.skill.description }}</div>
                             </div>
                         </div>
                     </div>
@@ -39,6 +39,10 @@
                         </form>
                     </div>
                 </div>
+            </div>
+            {% else %}
+            <div class="col-xs-12 alert alert-danger text-center" role="alert">
+                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes hechizos investigados. Tal vez deberías <i class="fa fa-fw fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
             </div>
             {% endfor %}
         </div>
