--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Recaudar</span></a>
+                        <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs">Recaudar oro</span></a>
                         <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-secret"></i><span class="hidden-xs">Mercado negro</span></a>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <a href="{{ path('archmage_game_magic_charge') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-tint"></i><span class="hidden-xs">Cargar</span></a>
+                        <a href="{{ path('archmage_game_magic_charge') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-tint"></i><span class="hidden-xs">Cargar maná</span></a>
                         <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
                         <a href="{{ path('archmage_game_magic_research') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-graduation-cap"></i><span class="hidden-xs">Investigar</span></a>
                     </div>
@@ -122,8 +122,8 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <a href="{{ path('archmage_game_account_inbox') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-envelope"></i><span class="hidden-xs">Leer</span></a>
-                        <a href="{{ path('archmage_game_account_outbox') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs">Enviar</span></a>
+                        <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-envelope"></i><span class="hidden-xs">Mensajes</span></a>
+                        <a href="{{ path('archmage_game_account_profile') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-line-chart"></i><span class="hidden-xs">Ranking</span></a>
                     </div>
                 </div>
             </div>
