--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -17,7 +17,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                Aquí puedes aplicar impuestos desorbitados a tus leales súbditos con el objetivo de obtener grandes cantidades de oro para tus propios fines.
+                                Aquí puedes aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de oro rápidamente.
                             </div>
                         </div>
                     </div>
