--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -17,7 +17,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                Aquí puedes recargar tu maná, y necesitas mucho para lanzar conjuros poderosos y pagar mantenimientos.
+                                Aquí puedes recargar tus reservas de maná para lanzar los hechizos más caros y poderosos o pagar altos mantenimientos.
                             </div>
                         </div>
                     </div>
