--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -48,8 +48,10 @@
                 </div>
             </div>
             {% else %}
-            <div class="col-xs-12 alert alert-danger text-center" role="alert">
-                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Ya no tienes nada más que investigar. Tal vez sea la hora de lanzar el Armageddon.
+            <div class="container">
+                <div class="col-xs-12 alert alert-danger text-center" role="alert">
+                    <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Ya no tienes nada más que investigar. Tal vez sea la hora de lanzar el Armageddon.
+                </div>
             </div>
             {% endfor %}
         </div>
