--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -17,7 +17,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                Texto descriptivo
+                                Aquí puedes encontrar más tierras libres que añadir a tu reino para construir edificios, hasta un límite de 3500.
                             </div>
                         </div>
                     </div>
