--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -170,3 +170,10 @@ div.dataTables_paginate, div.dataTables_filter {
     padding-left: 5px;
     padding-right: 5px;
 }
+/* INPUT SIZE */
+@media (min-width: 768px) {
+    .form-inline .input-group > .form-control {
+        min-width: 220px !important;
+        max-width: 220px !important;
+    }
+}
