--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -9,6 +9,7 @@
                 <div class="page-header text-center">
                     <h1><i class="fa fa-fw fa-envelope"></i>Mensajes</h1>
                 </div>
+                {% if message is not defined %}
                 <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                     <tr>
@@ -21,22 +22,20 @@
                     {% for message in player.messages %}
                         <tr>
                             <td class="text-center">{{ message.datetime|date('d/m/Y H:i:s') }}</td>
-                            <td class="text-center"><a href="{{ path('archmage_game_account_profile') }}">{{ message.who.nick|default('Admin') }}</a></td>
-                            <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a data-toggle="collapse" href="#message">{{ message.subject }}</a></td>
+                            <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': message.who.nick|default('Admin') } ) }}">{{ message.who.nick|default('Admin') }}</a></td>
+                            <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a href="{{ path( 'archmage_game_account_message', { 'hash': message.hash } ) }}">{{ message.subject }}</a></td>
                         </tr>
                     {% endfor %}
                     </tbody>
                 </table>
-            </div>
-            <div class="col-xs-12">
-                <div class="panel panel-default collapse" id="message">
-                    <div class="panel-heading text-center">Asunto</div>
-                    <div class="panel-body text-padded">
-                        <div class="col-xs-12">
-
-                        </div>
+                {% else %}
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">{{ message.subject }}</div>
+                    <div class="panel-body text-center">
+                        {{ message.text }}
                     </div>
                 </div>
+                {% endif %}
             </div>
         </div>
     </div>
