--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -15,7 +15,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading text-center">Objetivo del juego</div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -23,15 +23,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading text-center">Batallas</div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12"><a name="subastas"></a>
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Subastas</div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -83,6 +75,9 @@
                                 <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldResource|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaResource|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleResource|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldCap|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaCap|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleCap|nf }}</div>
                             </div>
                         </div>
                     </div>
