--- a/src/Archmage/GameBundle/Resources/views/Home/login.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/login.html.twig
@@ -6,6 +6,7 @@
     <div class="container">
         <div class="jumbotron text-center">
             <h1>Arch<i class="fa fa-fw fa-eye"></i>Mage</h1>
+            <h3>- BETA -</h3>
             <form class="form-signin" data-toggle="validator">
                 <input type="text" class="form-control" placeholder="Usuario" required autofocus>
                 <input type="password" class="form-control" placeholder="Contraseña" required>
