--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-bar-chart"></i>Resumen<br><small><i class="fa fa-fw fa-hourglass"></i>300</small></h1>
+                    <h1><i class="fa fa-fw fa-bar-chart"></i>Resumen<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns }}</small></h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -19,7 +19,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
@@ -38,14 +38,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-success" style="width: 30%">
-                                        1000
-                                    </div>
-                                    <div class="progress-bar progress-bar-danger" style="width: 70%">
-                                        500
-                                    </div>
-                                </div>
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
@@ -129,7 +122,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/social.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-
+                                Texto descriptivo
                             </div>
                         </div>
                     </div>
