--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -12,7 +12,7 @@ img.background {
     left: 0;
 }
 /* responsive mobile background */
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 768px){
     img.background {
         left: 50%;
         margin-left: -512px; }
@@ -44,6 +44,7 @@ img.background {
 }
 img.custom-thumbnail {
     max-width: 100%;
+    border-right: 1px solid rgba(0, 0, 0, 0.6);
 }
 img.custom-rspls {
     max-width: 75%;
@@ -173,10 +174,11 @@ div.dataTables_paginate, div.dataTables_filter {
     padding-left: 5px;
     padding-right: 5px;
 }
-/* INPUT SIZE */
+/* INPUT SIZE EN CHROME DISTINTO DE FIREFOX, MUY PEQUEÑO, ARREGLADO CON */
 @media (min-width: 768px) {
     .form-inline .input-group > .form-control {
         min-width: 220px !important;
         max-width: 220px !important;
     }
 }
+html {-webkit-text-size-adjust: none !important;}
