--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -10,31 +10,36 @@
                     <h1><i class="fa fa-fw fa-envelope"></i>Mensajes</h1>
                 </div>
                 {% if message is not defined %}
-                <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                    <thead>
-                    <tr>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i><span class="hidden-xs">Mago</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-lg fa-question-circle"></i><span class="hidden-xs">Asunto</span></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for message in player.messages %}
+                    <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                        <thead>
                         <tr>
-                            <td class="text-center">{{ message.datetime|date('d/m/Y H:i:s') }}</td>
-                            <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': message.who.nick|default('Admin') } ) }}">{{ message.who.nick|default('Admin') }}</a></td>
-                            <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a href="{{ path( 'archmage_game_account_message', { 'hash': message.hash } ) }}">{{ message.subject }}</a></td>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i><span class="hidden-xs">Mago</span></th>
+                            <th class="text-center"><i class="fa fa-fw fa-lg fa-question-circle"></i><span class="hidden-xs">Asunto</span></th>
                         </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                        {% for message in player.messages %}
+                            <tr>
+                                <td class="text-center">{{ message.datetime|date('d/m/Y H:i:s') }}</td>
+                                <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': message.who.nick|default('Admin') } ) }}">{{ message.who.nick|default('Admin') }}</a></td>
+                                <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a href="{{ path( 'archmage_game_account_message', { 'hash': message.hash } ) }}">{{ message.subject }}</a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 {% else %}
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">{{ message.subject }}</div>
-                    <div class="panel-body text-center">
-                        {{ message.text }}
-                    </div>
-                </div>
+                    {% for i in 1..3 %}
+                        {% if loop.index is odd %}
+                            <div class="col-xs-12 col-md-8 alert alert-success text-center" role="alert">
+                                Texto de prueba <i class="fa fa-fw fa-lg fa-caret-square-o-right"></i>
+                            </div>
+                        {% else %}
+                            <div class="col-xs-12 col-md-offset-4 col-md-8 alert alert-danger text-center" role="alert">
+                                <i class="fa fa-fw fa-lg fa-caret-square-o-left"></i> Texto de prueba
+                            </div>
+                        {% endif %}
+                    {% endfor %}
                 {% endif %}
             </div>
         </div>
