--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -29,17 +29,20 @@
                                 <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ construction.building.goldResource|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ construction.building.manaResource|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ construction.building.peopleResource|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ construction.building.goldCap|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ construction.building.manaCap|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ construction.building.peopleCap|nf }}</div>
                             </div>
                         </div>
                     </div>
                     <div class="panel-footer text-center">
-                        <form class="form-inline" data-toggle="validator">
+                        <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_territory_demolish') }}" method="post">
                             <div class="form-group has-feedback">
                                 <div class="input-group">
                                     <div class="input-group-btn">
                                         <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-bomb"></i> Derribar</button>
                                     </div>
-                                    <input type="number" class="form-control" id="turns" min="1" max="300" value="0" required/>
+                                    <input type="number" class="form-control" id="{{ construction.building.name }}" name="{{ construction.building.name }}" min="1" max="{{ player.turns }}" value="0" required/>
                                     <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 </div>
                             </div>
