--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -10,7 +10,7 @@
                     <h1><i class="fa fa-fw fa-map"></i>Explorar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
                 </div>
                 <div class="panel panel-default">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> {{ player.lands|nf }} tierras</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> {{ player.building('Tierras').quantity|nf }} tierras</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-4">
@@ -28,12 +28,11 @@
                                     <div class="input-group-btn">
                                         <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Explorar</button>
                                     </div>
-                                    <input type="number" class="form-control" id="turns" min="1" max="{{ player.turns }}" value="0" required/>
+                                    <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
                                     <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 </div>
                             </div>
                         </form>
-                        {% include "ArchmageGameBundle::advice.html.twig" %}
                     </div>
                 </div>
             </div>
